--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "joypad.js": "^2.3.2",
     "node-rtsp-stream": "^0.0.9",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-charts": "^0.0.1",
     "react-cookie": "^6.1.1",
     "react-daisyui": "^4.1.2",
