--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
     "hls.js": "^1.4.10",
+    "html-to-image": "^1.11.11",
     "http-server": "^14.1.1",
     "joypad.js": "^2.3.2",
     "node-rtsp-stream": "^0.0.9",
@@ -41,6 +42,7 @@
     "react-icons": "^4.10.1",
     "react-joystick-component": "^6.0.0",
     "react-odometerjs": "^3.1.0",
+    "react-pdf-charts": "^0.2.2",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.18.0",
     "react-to-pdf": "^1.0.1",
