--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_API_URL_INSPECTO="http://192.168.88.2:8888" #inspecto
+# VITE_API_URL_INSPECTO="http://192.168.88.2:8888" #inspecto
 VITE_API_URL_CBOX="http://192.168.88.246:8887" #inspecto
-# VITE_API_URL_INSPECTO="http://localhost:8888" # local
+VITE_API_URL_INSPECTO="http://localhost:8888" # local
 # VITE_API_URL_CBOX="http://localhost:8887" # local
 # VITE_API_URL_CBOX="http://192.168.88.254:3000" # localip
 # VITE_API_URL_CBOX="http://192.168.88.254:3000" # localip
